# TeamPass

./: docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  repomix-output.xml  ruff.toml  workspace.toml
.github/workflows/: deploy-client.yml  deploy.yml
bases/teampass/admin_panel/: authentication.py  core.py  formatters.py  inject.py  settings.py  utils.py
bases/teampass/admin_panel/templates/: change_password.html  student_import.html  team_detail.html
bases/teampass/admin_panel/views/: __init__.py  admin.py  authentication.py  change_password.py  student.py  student_import.py  team.py  team_detail.py  user.py
bases/teampass/entrypoint/: __init__.py  core.py  exceptions.py  scheme.py  security.py  settings.py  utils.py
bases/teampass/entrypoint/routers/: __init__.py  auth.py  authentication.py  teams.py  user.py  users.py
bases/teampass/migrator/: __init__.py  alembic.ini
bases/teampass/migrator/migrations/: env.py
bases/teampass/migrator/migrations/versions/: 0b1c6bfbaec3_add_live_option.py  12b2647e7bea_add_admin.py  3f0538dc54b6_add_core_models.py  41102b67cc37_add_transaction_storage.py  4f4474ac6b7c_move_logic_to_postgres.py  5a30dfccba79_rename_live_option.py  5ae4503d7d2e_add_invitation.py  e2d127b9bd90_add_student_profile.py
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/api/: auth.ts  client.ts  profile.ts  types.ts  users.ts
client/src/components/: ProtectedRoute.tsx  PublicRoute.tsx
client/src/layouts/: MainLayout.tsx
client/src/pages/: Challenges.tsx  Dashboard.tsx  Knowledge.tsx  Leaderboard.tsx  Login.tsx  Profile.tsx  Register.tsx  Team.tsx
components/teampass/admin/: __init__.py  core.py
components/teampass/admin/dto/: admin.py
components/teampass/admin/methods/: __init__.py  change_password.py  create.py  login.py
components/teampass/admin/storage/: __init__.py  admin.py
components/teampass/database/: __init__.py  core.py  settings.py
components/teampass/database/models/: __init__.py  _base.py  student.py  student_profile.py  team.py  user.py
components/teampass/domain_core/: __init__.py  core.py
components/teampass/live_option/: __init__.py  core.py
components/teampass/logging/: __init__.py  core.py  settings.py
components/teampass/team/: __init__.py  core.py  policies.py
components/teampass/team/dto/: __init__.py  team.py
components/teampass/team/methods/: __init__.py  accept_invitation.py  create_team.py  delete_invitation.py  exceptions.py  invite_to_team.py  leave_team.py  remove_team_member.py  rename_team.py  transfer_captaincy.py
components/teampass/team/storage/: __init__.py  invitation.py  team.py
components/teampass/transaction/: __init__.py  core.py  policies.py
components/teampass/transaction/storage/: __init__.py  cycle_snapshot.py  game_cycle.py  point_transaction.py
components/teampass/user/: __init__.py  core.py
components/teampass/user/dto/: __init__.py  user.py
components/teampass/user/methods/: __init__.py  change_email.py  change_password.py  exceptions.py  login.py  register.py  update_student_profile.py
components/teampass/user/storage/: __init__.py  student.py  student_profile.py  user.py
projects/admin_panel/: Dockerfile  pyproject.toml
projects/entrypoint/: Dockerfile  pyproject.toml
projects/migrator/: Dockerfile  pyproject.toml
test/: conftest.py
test/bases/teampass/admin_panel/: test_core.py
test/bases/teampass/entrypoint/: test_core.py
test/bases/teampass/migrator/: test_core.py
test/components/teampass/admin/: conftest.py  test_change_password.py  test_core.py  test_create.py  test_login.py
test/components/teampass/database/: test_core.py
test/components/teampass/domain_core/: test_core.py
test/components/teampass/live_option/: test_core.py
test/components/teampass/logging/: test_core.py
test/components/teampass/team/: conftest.py  test_accept_invitation.py  test_core.py  test_create_team.py  test_delete_invitation.py  test_invite_to_team.py  test_leave_team.py  test_remove_team_member.py  test_rename_team.py  test_transfer_captaincy.py
test/components/teampass/transaction/: test_core.py
test/components/teampass/user/: conftest.py  test_change_email.py  test_change_password.py  test_core.py  test_login.py  test_register.py  test_update_student_profile.py
