[tool.poetry]
name = "admin_panel"
version = "0.1.0"

authors = ["ycalk <alosev752@gmail.com>"]
license = ""

packages = [
    {include = "teampass/admin_panel",from = "../../bases"},
    {include = "teampass/database",from = "../../components"},
    {include = "teampass/logging",from = "../../components"},
    {include = "teampass/domain_core",from = "../../components"},
    {include = "teampass/team",from = "../../components"},
    {include = "teampass/admin",from = "../../components"},
    {include = "teampass/user",from = "../../components"},
    {include = "teampass/live_option",from = "../../components"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic-settings = "^2.13.1"
dishka = {extras = ["starlette"], version = "^1.9.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
asyncpg = "^0.31.0"
structlog = "^25.5.0"
opentelemetry-api = "^1.40.0"
opentelemetry-sdk = "^1.40.0"
opentelemetry-exporter-otlp = "^1.40.0"
opentelemetry-instrumentation-sqlalchemy = "^0.62b0"
opentelemetry-instrumentation-starlette = "^0.62b0"
email-validator = "^2.3.0"
argon2-cffi = "^25.1.0"
sqladmin = {extras = ["full"], version = "^0.24.0"}
uvicorn = "^0.44.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_project = "teampass.admin_panel:run"