[tool.poetry]
name = "entrypoint"
version = "0.1.0"

authors = ["ycalk <alosev752@gmail.com>"]
license = ""

packages = [
    {include = "teampass/entrypoint",from = "../../bases"},
    {include = "teampass/database",from = "../../components"},
    {include = "teampass/user",from = "../../components"},
    {include = "teampass/domain_core",from = "../../components"},
    {include = "teampass/logging",from = "../../components"},
    {include = "teampass/team",from = "../../components"},
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic-settings = "^2.13.1"
fastapi = {extras = ["standard"], version = "^0.135.1"}
dishka = {extras = ["fastapi"], version = "^1.9.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
asyncpg = "^0.31.0"
structlog = "^25.5.0"
opentelemetry-api = "^1.40.0"
opentelemetry-sdk = "^1.40.0"
opentelemetry-exporter-otlp = "^1.40.0"
opentelemetry-instrumentation-sqlalchemy = "^0.61b0"
opentelemetry-instrumentation-fastapi = "^0.61b0"
email-validator = "^2.3.0"
argon2-cffi = "^25.1.0"
pyjwt = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run_project = "teampass.entrypoint:run"